# varya-bd-2024

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  main.data  main.js  main.wasm
assets/shaders/: simple-fs.glsl  simple-vs.glsl  textured-fs.glsl  textured-vs.glsl
src/: assets.c  assets.h  camera-types.h  camera.c  camera.h  graphics-mesh.c  graphics-object.c  graphics-shader.c  graphics-texture.c  graphics-types.h  graphics.c  graphics.h  main.c  mesh-helper.c  mesh-helper.h  meshes-data.h  scene.c  scene.h
src/meshes-data/: envelope.c  glow.c  house.c  pivot.c  sky.c
